--- a/Python Scripts/CountingData.ipynb
+++ b/Python Scripts/CountingData.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,37 +26,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Count collected data files "
+    "### Count collected data files "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All files:  113\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'root' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-8aefd72ca039>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     33\u001b[0m \"\"\"\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 35\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"TXT files: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfileCounter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'root' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\all coures to select from\"   # home laptop\n",
     "path = r\"C:\\Users\\a.dimitrova\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"   # toshiba laptop\n",
@@ -101,7 +85,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## List files in directories"
+    "### List files in directories"
    ]
   },
   {
@@ -127,14 +111,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Count all sentences in all files"
+    "### Count all sentences in all files"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Sentence and labels count + printing labeled sentences\n",
     "\n",
@@ -143,40 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "____________________________________________\n",
-      "|CD     |CM    |SM    |AP    |EX    |NL    | \n",
-      "|6621   |304   |570   |318   |566   |0   | \n",
-      "|78.99% |3.63% |6.80% |3.79% |6.75% |0.00% |\n",
-      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
-      "_____________________________________________\n",
-      "| FILES: 111 |\n",
-      "| SENTENCES_АLL: 8960 | SENTENCES_REL: 8382 |\n",
-      "| LABELED SENT: 8958 | UNLABELED SENT: 2 |\n",
-      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
-      "____________________________________\n",
-      "|CD     |CM    |SM    |AP    |EX    | \n",
-      "|6621   |304   |570   |318   |566   | \n",
-      "|78.99% |3.63% |6.80% |3.79% |6.75% |\n",
-      "¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯¯\n",
-      "___________________________________________________________________________________________\n",
-      "\n",
-      "-------PRINTING the first 5 <<CM>> TUPLES------\n",
-      "\n",
-      "('CM', 'this is the average speed of the ball ')\n",
-      "('CM', \"speed is how far you've traveled over how long it took you so if i divide these this is the speed of the ball the average speed of the ball between point four and point five seconds and this works out to be NUMBER centimeters per second i mean i'm dividing by this very nice number point one \")\n",
-      "('CM', 'music here is a classic related rates problem ')\n",
-      "('CM', 'this sort of object is called a differential ')\n",
-      "('CM', \"it's called a differential \")\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
    "source": [
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\all coures to select from\"   #THE REST OF THE DATA\n",
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"    #TRAIN / TEST\n",
@@ -487,15 +446,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## Convert all files to CSV"
+    "### Convert all files to CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Data for Crowdsourcing - UNLABELED\"\n",
@@ -536,23 +499,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "hidden": true,
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-bb5b8226b350>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m                             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m                                 \u001b[1;31m#print(line)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m                                 \u001b[0msingleFile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m                     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Data for Crowdsourcing - UNLABELED\"\n",
     "### concatenate files into one         \n",
@@ -581,8 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\"\n",
@@ -622,6 +576,71 @@
     "#with open(r'C:\\Users\\ani\\Desktop\\Course data Thesis\\Intent Mining ALL files\\allMerged.txt', 'w') as oFile:\n",
     "    \n",
     "textsent = text.split(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract 150 sentences per class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<<< CM: 250 | CD: 250 | AP: 250 | EX: 250 | SM: 250 >>>\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\"\n",
+    "\n",
+    "# Total number of sentences per class: 250\n",
+    "CM, CD, AP, EX, SM = 0,0,0,0,0\n",
+    "\n",
+    "with open(r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Selected files TRAIN\\150PerClass.csv\", 'w', encoding = \"ISO-8859-1\") as oFile:\n",
+    "    for root, subdirs, files in os.walk(path):\n",
+    "        for curFile in os.listdir(root):\n",
+    "            curFilePath = os.path.join(root, curFile)\n",
+    "\n",
+    "            if os.path.isdir(curFilePath): pass\n",
+    "            elif curFilePath.endswith(\".csv\"): pass\n",
+    "            else: \n",
+    "                curFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "                                \n",
+    "                sentences = curFile.read().split('\\n')\n",
+    "                #print(len(sentences))\n",
+    "                \n",
+    "                for sent in sentences:\n",
+    "                    parts = sent.split(\"|\")\n",
+    "                    \n",
+    "                    if parts[0] == \"CM\" and CM < 250: \n",
+    "                        oFile.write(parts[0]+\"|\"+parts[1]+\"\\n\")\n",
+    "                        CM += 1\n",
+    "                    elif parts[0] == \"CD\" and CD < 250: \n",
+    "                        oFile.write(parts[0]+\"|\"+parts[1]+\"\\n\")\n",
+    "                        CD += 1\n",
+    "                    elif parts[0] == \"AP\" and AP < 250: \n",
+    "                        oFile.write(parts[0]+\"|\"+parts[1]+\"\\n\")\n",
+    "                        AP += 1\n",
+    "                    elif parts[0] == \"SM\" and SM < 250: \n",
+    "                        oFile.write(parts[0]+\"|\"+parts[1]+\"\\n\")\n",
+    "                        SM += 1\n",
+    "                    elif parts[0] == \"EX\" and EX < 250: \n",
+    "                        oFile.write(parts[0]+\"|\"+parts[1]+\"\\n\")\n",
+    "                        EX += 1\n",
+    "\n",
+    "                curFile.close()                \n",
+    "\n",
+    "\n",
+    "print(\"\\n<<< CM: {} | CD: {} | AP: {} | EX: {} | SM: {} >>>\".format(CM, CD, AP, EX, SM))"
    ]
   }
  ],
