--- a/Python Scripts/NaiveBayes Classifier (my data).ipynb
+++ b/Python Scripts/NaiveBayes Classifier (my data).ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,12 +94,12 @@
       "[Removing punctuation from file..] \n",
       "[Removing MultiSpace..] \n",
       "[Stemming..]\n",
-      "[Writing to file..] C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged.txt\n"
+      "[Writing to file..] C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged250PerClass.txt\n"
      ]
     }
    ],
    "source": [
-    "iFilePath = r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\allMergedNoNL.csv\"\n",
+    "iFilePath = r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\250PerClass.csv\"\n",
     "\n",
     "fullSWList = ['about', 'above', 'after', 'again', 'against', 'all', 'a' , 'am', 'an', 'and', 'any', 'are', 'as', \n",
     "                'at', 'be', 'because', 'been', 'before', 'being', 'below', 'between', 'both', 'but', 'by', 'can', 'did', \n",
@@ -199,7 +199,7 @@
     "    sentences = stripMultiSpace(sentences)\n",
     "    sentences = stem(sentences)\n",
     "    \n",
-    "    oFilePath = r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged.txt\"\n",
+    "    oFilePath = r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged250PerClass.txt\"\n",
     "    with open(oFilePath, 'w', encoding = \"utf-8\") as oFile:\n",
     "        print(\"[Writing to file..]\",oFilePath)\n",
     "        for sent in sentences:\n",
@@ -228,11 +228,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = open(r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged.txt\", 'r', encoding = \"ISO-8859-1\")\n",
+    "file = open(r\"C:\\Users\\ani\\Dropbox\\Stuff\\university\\data\\processedMerged250PerClass.txt\", 'r', encoding = \"ISO-8859-1\")\n",
     "sentences = file.read().split('\\n')\n",
     "text = \"\"\n",
     "\n",
@@ -301,25 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAIN:  6286  | TEST: 2096\n",
+      "TRAIN:  939  | TEST: 313\n",
       "\n",
-      "Accuracy: 79.10 %\n",
+      "Accuracy: 57.19 %\n",
       "Most Informative Features\n",
-      "            contains(wo) = True                  : CD     =    477.7 : 1.0\n",
-      "        contains(though) = True                  : CD     =    359.9 : 1.0\n",
-      "           contains(ask) = True                  : SM     =    325.8 : 1.0\n",
-      "         contains(cours) = True                  : EX     =    310.8 : 1.0\n",
-      "           contains(say) = True                  : AP     =    172.0 : 1.0\n",
-      "iteration execution time: 16.77 min\n",
-      "Runs:  8\n",
-      "Execution time: 16.77 min\n"
+      "        contains(second) = True               CD : SM     =     30.3 : 1.0\n",
+      "           contains(bal) = True               CD : SM     =     29.1 : 1.0\n",
+      "        contains(exampl) = True               EX : CD     =     23.6 : 1.0\n",
+      "           contains(let) = True               EX : AP     =     16.4 : 1.0\n",
+      "            contains(av) = True               CD : SM     =     14.4 : 1.0\n",
+      "iteration execution time: 0.17 min\n",
+      "Runs:  1\n",
+      "Execution time: 0.17 min\n"
      ]
     }
    ],
@@ -356,9 +356,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'svm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-fd79ca758ae5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mclf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msvm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'linear'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mC\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscores\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'svm' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "clf = svm.SVC(kernel='linear', C=1)\n",
